--- a/index/static/style.css
+++ b/index/static/style.css
@@ -527,6 +527,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   margin-right: 5px;
 }
 .showpod-content {
+  min-height: 165px;
   position: relative;
 }
 
@@ -540,7 +541,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 .episodes-table {
   position: relative;
   table-layout: fixed;
-  margin: 50px 0 0;
+  margin: 40px 0 0;
 }
 .episodes-table th,
 .episodes-table td {
