--- a/index/static/style.css
+++ b/index/static/style.css
@@ -527,7 +527,7 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   margin-right: 5px;
 }
 .showpod-content {
-  min-height: 165px;
+  min-height: 155px;
   position: relative;
 }
 
@@ -554,10 +554,6 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
 }
 .episode-header {
   cursor: pointer;
-}
-.episode-header th,
-.episode-header td {
-  min-height: 30px;
 }
 .episodes-table .order {
   text-align: center;
@@ -1125,8 +1121,8 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   .episode-header {
     padding: 5px;
   }
-  .episode-header td,
-  .episode-header th {
+  .episodes-table td,
+  .episodes-table th {
     display: block;
     text-align: right;
   }
@@ -1199,8 +1195,8 @@ background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/s
   #playlist .episode-header {
     padding: 5px;
   }
-  #playlist .episode-header td,
-  #playlist .episode-header th {
+  #playlist .episodes-table td,
+  #playlist .episodes-table th {
     display: block;
     text-align: right;
   }
