--- a/podcasts/templates/results-options.html
+++ b/podcasts/templates/results-options.html
@@ -69,7 +69,7 @@
             </span>
           </a>
         {% elif results.view == "playlist" %}
-          <button class="btn-dope" onclick="playNext()">
+          <button class="btn-dope" onclick="playNext(this)">
             <span class="active">
               Play next
             </span>
